added css and js

--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Website for company miHoYo to sell Music Albums</title>
+    <title>John's photograhy website</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" type="text/css">
+    <script src="script.js"></script>
     <style>
         .headerfont{font-family: 'Times New Roman', Times, serif;}
         h3{font-family: 'Noto Sans JP', sans-serif;}
         h4{font-family: 'Noto Sans JP', sans-serif;}
     </style>
 </head>
+<body>
+    <header id="heading" class="site-header" role="banner">
+        <div>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Samples</a></li>
+                    <li><a href="#">About me</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+</body>
