--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" type="text/css">
-    <script src="script.js"></script>
+    <meta charset="UTF-8">
     <style>
         .headerfont{font-family: 'Times New Roman', Times, serif;}
         h3{font-family: 'Noto Sans JP', sans-serif;}
@@ -14,6 +14,7 @@
     </style>
 </head>
 <body>
+    <script src="script.js"></script>
     <header id="heading" class="site-header" role="banner">
         <div>
             <nav>
