--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>John's photograhy website</title>
+    <title>John's photograhy website - Home</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
@@ -19,9 +19,9 @@
         <div>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Samples</a></li>
-                    <li><a href="#">About me</a></li>
+                    <li><a href="#index.html">Home</a></li>
+                    <li><a href="#samples.html">Samples</a></li>
+                    <li><a href="#about.html">About me</a></li>
                 </ul>
             </nav>
         </div>
