--- a/index.html
+++ b/index.html
@@ -8,22 +8,34 @@
     <link rel="stylesheet" href="style.css" type="text/css">
     <meta charset="UTF-8">
     <style>
+        body {background-image: url("Background_images/luca-bravo-ESkw2ayO2As-unsplash.jpg");
+        background-size: cover;
+    }
         .headerfont{font-family: 'Times New Roman', Times, serif;}
         h3{font-family: 'Noto Sans JP', sans-serif;}
         h4{font-family: 'Noto Sans JP', sans-serif;}
+        nav li {
+        display: inline-block;
+        margin-right: 100px;
+    }
     </style>
 </head>
 <body>
     <script src="script.js"></script>
     <header id="heading" class="site-header" role="banner">
-        <div>
+        <div class="nav_bar">
             <nav>
                 <ul>
-                    <li><a href="#index.html">Home</a></li>
-                    <li><a href="#samples.html">Samples</a></li>
-                    <li><a href="#about.html">About me</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="samples.html">Samples</a></li>
+                    <li><a href="about.html">About me</a></li>
                 </ul>
             </nav>
         </div>
     </header>
+    <section>
+        <p>Heyo</p>
+        <p>Heyo</p>
+        <p>Heyo</p>
+    </section>
 </body>
