--- a/about.html
+++ b/about.html
@@ -19,9 +19,9 @@
         <div>
             <nav>
                 <ul>
-                    <li><a href="#index.html">Home</a></li>
-                    <li><a href="#samples.html">Samples</a></li>
-                    <li><a href="#about.html">About me</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="samples.html">Samples</a></li>
+                    <li><a href="about.html">About me</a></li>
                 </ul>
             </nav>
         </div>
