--- a/samples.html
+++ b/samples.html
@@ -11,6 +11,10 @@
         .headerfont{font-family: 'Times New Roman', Times, serif;}
         h3{font-family: 'Noto Sans JP', sans-serif;}
         h4{font-family: 'Noto Sans JP', sans-serif;}
+        html,
+        body {
+            margin: 0;
+    }
     </style>
 </head>
 <body>
@@ -18,10 +22,13 @@
     <header id="heading" class="site-header" role="banner">
         <div>
             <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="samples.html">Samples</a></li>
-                    <li><a href="about.html">About me</a></li>
+                <ul class="nav-bar">
+                    <h2 class="logo-title">
+                        <a>John's Photography</a>
+                    </h2>
+                    <li class = "right"><a href="about.html">About me</a></li>
+                    <li class = "right"><a href="samples.html">Samples</a></li>
+                    <li class = "right"><a href="index.html">Home</a></li>
                 </ul>
             </nav>
         </div>
