Home page done, left with proper flexboxes?

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
         .headerfont{font-family: 'Times New Roman', Times, serif;}
         h3{font-family: 'Noto Sans JP', sans-serif;}
         h4{font-family: 'Noto Sans JP', sans-serif;}
-        body {background-image: url("Background_images/luca-bravo-ESkw2ayO2As-unsplash.jpg");
+        body {background-image: url("Background_images/sergei-a--heLWtuAN3c-unsplash.jpg");
         background-size: cover;
+        z-index: 0;
+        position: relative;
     }
         html,
         body {
@@ -37,8 +39,11 @@
         </div>
     </header>
     <section>
-        <p>Heyo</p>
-        <p>Heyo</p>
-        <p>Heyo</p>
+        <div class="grid">
+            <img class="dropdown" src="Background_images/Shade.png" height="790px" width="1920px">
+            <span class="prelude">Environment / Food / Nature</span>
+		    <span class="desc">Photography by John Maxwell</span>
+            <a class="copyright">Copyright &copy; 2023 by John Maxwell</a>
+        </div>
     </section>
 </body>
