--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <section>
         <div class="grid">
             <img class="dropdown" src="Background_images/Shade.png" height="790px" width="1920px">
-            <span class="prelude">Environment / Food / Nature</span>
-		    <span class="desc">Photography by John Maxwell</span>
+            <a class="prelude">Environment / Food / Nature</a>
+		    <a class="desc">Photography by John Maxwell</a>
             <a class="copyright">Copyright &copy; 2023 by John Maxwell</a>
         </div>
     </section>
