--- a/about.html
+++ b/about.html
@@ -11,6 +11,11 @@
         .headerfont{font-family: 'Times New Roman', Times, serif;}
         h3{font-family: 'Noto Sans JP', sans-serif;}
         h4{font-family: 'Noto Sans JP', sans-serif;}
+        body { background-image: url(Background_images/luca-bravo-ESkw2ayO2As-unsplash.jpg);
+        background-size: cover;
+        z-index: 0;
+        position: relative;
+        }
         html,
         body {
             margin: 0;
