--- a/samples.html
+++ b/samples.html
@@ -11,6 +11,11 @@
         .headerfont{font-family: 'Times New Roman', Times, serif;}
         h3{font-family: 'Noto Sans JP', sans-serif;}
         h4{font-family: 'Noto Sans JP', sans-serif;}
+        body { background-image: url(Background_images/eutah-mizushima-OWwK_0_EnxY-unsplash.jpg);
+        background-size: cover;
+        z-index: 0;
+        position: relative;
+        }
         html,
         body {
             margin: 0;
@@ -33,4 +38,9 @@
             </nav>
         </div>
     </header>
+    <section>
+        <div>
+            <img class="dropdown" src="Background_images/Shade.png" height="790px" width="1920px">
+        </div>
+    </section>
 </body>
