Done up the about me content page

--- a/about.html
+++ b/about.html
@@ -11,10 +11,11 @@
         .headerfont{font-family: 'Times New Roman', Times, serif;}
         h3{font-family: 'Noto Sans JP', sans-serif;}
         h4{font-family: 'Noto Sans JP', sans-serif;}
-        body { background-image: url(Background_images/luca-bravo-ESkw2ayO2As-unsplash.jpg);
+        body { background-image: url("Background_images/luca-bravo-ESkw2ayO2As-unsplash.jpg");
         background-size: cover;
         z-index: 0;
         position: relative;
+        background-repeat: no-repeat;
         }
         html,
         body {
@@ -38,4 +39,21 @@
             </nav>
         </div>
     </header>
+    <section>
+        <div class="box">
+            <img class="pfp" src="Background_images/John Maxwell from adobe stock.jpg">
+            <div class="story">
+                <h2>Hello! I am John Maxwell</h2><br>
+                <a>I have been a photographer for 7 years, and have travelled around the world to take photos of anything and everything that interests me.</a><br><br>
+                <a>I studied in Oxford University for 2 years at the age of 24 pursuing a masters in Classic Literature, however, I dropped out because I 
+                didn't have enough money to pay for the tuition fees and had to take on many small scale freelancing jobs to earn money.</a><br><br>
+                <a>I picked up photography after a friend gifted me a Canon EOS 4000D as a gift because he didn't have any use for it. I played the role of photographer
+                when attending a few of my relatives weddings, and even for some of my close friends. </a><br><br>
+                <a>However, photography is just my hobby, I am by no means a professional.</a><br><br>
+                <a>Photos are taken using a Canon EOS 4000D, but sometimes I use my Samsung S23 phone.</a><br><br>
+                <h3>Contact me:</h3>
+                <a>JohnnyDmaxwell_91912@gmail.com</a>
+            </div>
+        </div>
+    </section>
 </body>
