--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         background-size: cover;
         z-index: 0;
         position: relative;
+        background-repeat: no-repeat;
     }
+/*Remove the margain so can put in the Nav bar*/
         html,
         body {
             margin: 0;
@@ -41,8 +43,10 @@
     <section>
         <div class="grid">
             <img class="dropdown" src="Background_images/Shade.png" height="790px" width="1920px">
-            <a class="prelude">Environment / Food / Nature</a>
-		    <a class="desc">Photography by John Maxwell</a>
+            <div class="big-text">
+                <a class="prelude">Environment / Food / Nature</a>
+                <a class="desc">Photography by John Maxwell</a>
+            </div>
             <a class="copyright">Copyright &copy; 2023 by John Maxwell</a>
         </div>
     </section>
