--- a/samples.html
+++ b/samples.html
@@ -11,10 +11,11 @@
         .headerfont{font-family: 'Times New Roman', Times, serif;}
         h3{font-family: 'Noto Sans JP', sans-serif;}
         h4{font-family: 'Noto Sans JP', sans-serif;}
-        body { background-image: url(Background_images/eutah-mizushima-OWwK_0_EnxY-unsplash.jpg);
+        body {background-image: url("Background_images/eutah-mizushima-OWwK_0_EnxY-unsplash.jpg");
         background-size: cover;
         z-index: 0;
         position: relative;
+        background-repeat: no-repeat;
         }
         html,
         body {
@@ -40,7 +41,6 @@
     </header>
     <section>
         <div>
-            <img class="dropdown" src="Background_images/Shade.png" height="790px" width="1920px">
         </div>
     </section>
 </body>
