Added content for samples and fixed about me page

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         .headerfont{font-family: 'Times New Roman', Times, serif;}
         h3{font-family: 'Noto Sans JP', sans-serif;}
         h4{font-family: 'Noto Sans JP', sans-serif;}
-        body { background-image: url("Background_images/luca-bravo-ESkw2ayO2As-unsplash.jpg");
+        body {background-image: url("Background_images/luca-bravo-ESkw2ayO2As-unsplash.jpg");
         background-size: cover;
         z-index: 0;
         position: relative;
@@ -41,7 +41,9 @@
     </header>
     <section>
         <div class="box">
-            <img class="pfp" src="Background_images/John Maxwell from adobe stock.jpg">
+            <div class="container">
+                <img class="pfp" src="Background_images/John Maxwell from adobe stock.jpg">
+            </div>
             <div class="story">
                 <h2>Hello! I am John Maxwell</h2><br>
                 <a>I have been a photographer for 7 years, and have travelled around the world to take photos of anything and everything that interests me.</a><br><br>
