--- a/samples.html
+++ b/samples.html
@@ -16,7 +16,7 @@
         z-index: 0;
         position: relative;
         background-repeat: no-repeat;
-        }
+    }
         html,
         body {
             margin: 0;
@@ -40,7 +40,20 @@
         </div>
     </header>
     <section>
-        <div>
+        <div class="selection">
+            <div>
+                <img class="category1" src="Sample_images/Cat.jpeg">
+            </div>
+            <div>
+                <img class="category2" src="Sample_images/Cat.jpeg">
+            </div>
+            <div>
+                <img class="category3" src="Sample_images/Cat.jpeg">
+            </div>
+        </div>
+        <div class="buttons">
+            <img class="left-button" src="Background_images/Button left.png">
+            <img class="right-button" src="Background_images/Button right.png">
         </div>
     </section>
 </body>
