Added contact me form

--- a/about.html
+++ b/about.html
@@ -55,6 +55,8 @@
                 <a>Photos are taken using a Canon EOS 4000D, but sometimes I use my Samsung S23 phone.</a><br><br>
                 <h3>Contact me:</h3>
                 <a>JohnnyDmaxwell_91912@gmail.com</a>
+                <h3>Or submit a request here:</h3>
+                <button class="button"><a href="form.html"></a>Contact me!</button>
             </div>
         </div>
     </section>
