--- a/samples.html
+++ b/samples.html
@@ -41,19 +41,60 @@
     </header>
     <section>
         <div class="selection">
-            <div>
-                <img class="category1" src="Sample_images/Cat.jpeg">
+            <div class="section1">
+                <h2>Cat photos</h2>
+                <img class="image" src="Sample_images/Cat.jpeg">
+                <img class="image" src="Sample_images/Cat_2.jpeg">
+                <img class="image" src="Sample_images/Cat_3.jpeg">
+                <img class="image" src="Sample_images/Cat_4.jpeg">
             </div>
-            <div>
-                <img class="category2" src="Sample_images/Cat.jpeg">
+            <div class="section2">
+                <h2>Bridges</h2>
+                <img class="image" src="Sample_images/Bridge.jpeg">
+                <img class="image" src="Sample_images/Bridge_2.jpeg">
+                <img class="image" src="Sample_images/Bridge_3.jpeg">
+                <img class="image" src="Sample_images/Bridge_4.jpeg">
             </div>
-            <div>
-                <img class="category3" src="Sample_images/Cat.jpeg">
+            <div class="section3">
+                <h2>Food</h2>
+                <img class="image" src="Sample_images/Bread.jpeg">
+                <img class="image" src="Sample_images/Cabonara.jpeg">
+                <img class="image" src="Sample_images/Dessert.jpeg">
+                <img class="image" src="Sample_images/Katsudon.jpeg">
+                <img class="image" src="Sample_images/Very_nice_udon.jpeg">
             </div>
-        </div>
-        <div class="buttons">
-            <img class="left-button" src="Background_images/Button left.png">
-            <img class="right-button" src="Background_images/Button right.png">
+            <div class="section4">
+                <h2>Flowers</h2>
+                <img class="image" src="Sample_images/Bunch_of_flowers.jpeg">
+                <img class="image" src="Sample_images/Pink_flower.jpeg">
+                <img class="image" src="Sample_images/White_flower.jpeg">
+            </div>
+            <div class="section5">
+                <h2>Scenery</h2>
+                <img class="image" src="Sample_images/Blessings.jpeg">
+                <img class="image" src="Sample_images/Cute_shop.jpeg">
+                <img class="image" src="Sample_images/Gate.jpeg">
+                <img class="image" src="Sample_images/Hillside_house.jpeg">
+                <img class="image" src="Sample_images/House_on_hillside.jpeg">
+                <img class="image" src="Sample_images/Mountain_tunnel.jpeg">
+                <img class="image" src="Sample_images/Shrine_night.jpeg">
+                <img class="image" src="Sample_images/Shrine_night_2.jpeg">
+                <img class="image" src="Sample_images/Tori_gate.jpeg">
+                <img class="image" src="Sample_images/Walkway.jpeg">
+                <img class="image" src="Sample_images/Waterwheel.jpeg">
+            </div>
+            <div class="section6">
+                <h2>Environment</h2>
+                <img class="image" src="Sample_images/Forest_scenery.jpeg">
+                <img class="image" src="Sample_images/Forest_scenery_2.jpeg">
+                <img class="image" src="Sample_images/Forest_scenery_3.jpeg">
+                <img class="image" src="Sample_images/Forest_scenery_4.jpeg">
+                <img class="image" src="Sample_images/Forest_scenery_5.jpeg">
+                <img class="image" src="Sample_images/Forest_scenery_6.jpeg">
+                <img class="image" src="Sample_images/Forest_scenery_7.jpeg">
+                <img class="image" src="Sample_images/Train_view.jpeg">
+                <img class="image" src="Sample_images/Waterfall.jpeg">
+            </div>
         </div>
     </section>
 </body>
