--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="normalize.css" type="text/css">
     <link rel="stylesheet" href="style.css" type="text/css">
     <meta charset="UTF-8">
     <style>
@@ -56,7 +57,7 @@
                 <h3>Contact me:</h3>
                 <a>JohnnyDmaxwell_91912@gmail.com</a>
                 <h3>Or submit a request here:</h3>
-                <button class="button"><a href="form.html"></a>Contact me!</button>
+                <button class="button"><a href="form.html">Contact me!</a></button>
             </div>
         </div>
     </section>
